# cyborg

./: .gitignore  components.json  index.html  package-lock.json  package.json  vite.config.js
sidecar/: package-lock.json  package.json
sidecar/src/: bridge.js  index.js  providers.js  systemPrompt.js  tools.js
src/: App.jsx  appDb.js  db.js  systemPrompt.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  apps.rs  database.rs  mod.rs  settings.rs  sidecar.rs
src/components/: CanvasPanel.jsx  ChatInput.jsx  ChatMessage.jsx  ChatPanel.jsx  ComponentRenderer.jsx  PhosphorIcon.jsx  SaveDialog.jsx  SavedAppsMenu.jsx  SettingsModal.jsx  Sidebar.jsx
src/components/pages/: CanvasPage.jsx  MyAppsPage.jsx  SettingsPage.jsx
src/lib/: ui-components.js
src/styles/: index.css
