[package]
name = "cyborg"
version = "0.1.0"
description = "Cyborg - Personal AI Workspace"
authors = ["you"]
edition = "2021"

[lib]
name = "cyborg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
